Unreleased
- Added support for NPCs asking for items
- Added support for monster links
- Added --log-file parameter to set log file path or '-' for stdout
- Use online player list for name autocomplete
- Removed background color from shop list entries
- Fixed keyboard movement not stopping on NPC dialog opening

0.7.0 (21 August 2025)
- Ported to SDL 2
- Added Jewelry theme by Hal9000 (new default theme)
- Added Golden Delicious theme by Hello=)
- Added VSync and windowed fullscreen options
- Added support for scaling the graphics
- Added NPC quest indicators and a Quests window
- Added ability to open external links in news, chat and NPC dialogs
- Added ability to mention assigned keys in NPC dialogs
- Added support for text formatting to NPC dialogs
- Added support for reading most client-data settings from settings.xml
- Added support for XML includes, both absolute and relative
- Added support for map/layer mask
- Added support for item sprite replacements
- Added support for particle effects on equipment
- Added support for hit/miss sounds on equipment for all players
- Added support for players changing into monsters or NPCs
- Added online player list to Social window
- Added notification sound on receiving whisper
- Added default ports when connecting to a custom server
- Added an option to show being IDs to the debug window
- Added an option to render widget outlines to the debug window
- Added support for the "persistentIp" server info setting
- Added support for attributes.xml when connecting to tmwAthena
- Added support for charcreation.xml settings
- Added support for hair colors defined in itemcolors.xml
- Added support for option, opt1, opt2, opt3 status effect fields
- Added support for customizing NPC and Monster hover cursor
- Added support for disabling selection for certain NPCs and Monsters
- Added support for race-specific hair styles and per-character gender
- Added support for the TMX tile animation format