@@ -1,4 +1,5 @@
 Unreleased
+- Added health bars to damaged monsters
 - Added support for NPCs asking for items
 - Added support for monster links
 - Added --log-file parameter to set log file path or '-' for stdout
